@@ -4,6 +4,11 @@ VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/
 
 Version 1.18-2 (opened February 18, 2010)
 
+	* nesteddisc: failed if highest species frequencies were tied. The
+	error message was "Error: dims [prodcut 15] do not match the
+	length of object [0]". Found by Eric Fuchs in the help forum of
+	vegan.r-forge.r-project.org. 
+
 	* screeplot: New argument 'legend' for all methods (except
 	'decorana') to draw a legend if the observed and broken stick
 	distribution are both plotted. Now also respects 'pch' for the
